# wodbuster-booking-scheduler

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  _config.yml  alembic.ini  azure.yaml  check.ps1  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/docs/: coding-guidelines.md
.github/instructions/: adrs.instructions.md  documentation-style.instructions.md  envisioning.instructions.md  migration-specs.instructions.md  migration-tasks.instructions.md  specs.instructions.md  tasks.instructions.md
.github/workflows/: ci.yml  deploy.yml  infra-preview.yml  infra.yml
alembic/: env.py
alembic/versions/: 4e2b9c1a7d5f_us7_skipped_terminal_status.py  6af804dc63e6_baseline_postgres_16_schema_for_.py  8f4c1e2a3d5b_rule_model_v2.py  c7808dfff47d_baseline.py
docker/: entrypoint.sh
docs/: DEVELOPER_GUIDE.md
docs/envisioning/: wodbuster-booking-scheduler.md
infra/: main.bicep  main.parameters.json  resources.bicep
infra/modules/: containerapp.bicep  identity.bicep  keyvault.bicep  observability.bicep  postgres.bicep  registry.bicep  storage.bicep
src/wodbuster_worker/: __init__.py  app.py  bootstrap.py  config.py
tests/: conftest.py
tests/component/: conftest.py  test_anomaly_detector.py  test_auth_denial.py  test_auth_isolation.py  test_auth_redirect.py  test_booking_outcomes.py  test_cookie_routes.py  test_cookie_store.py  test_dashboard_banners.py  test_heartbeat_alerts.py  (+14 more)
(+124 files in other folders)
